[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.26.0"
actix-web = "4"
async-trait = "0.1.68"

tezos_smart_rollup_core = { git = "https://gitlab.com/tezos/tezos" } 
tezos_smart_rollup_host = { git = "https://gitlab.com/tezos/tezos" } 
serde = "1.0.158"
hex = "0.4.3"
sled="0.34"
bincode = "1.3.3"

[dev-dependencies.uuid]
version = "1.3.0"
features = ["v4"]