[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Let's use the last version of the SDK, todo: fix the version if it's an issue
tezos_smart_rollup_core = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_host = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_debug = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_encoding = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_storage = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_entrypoint = { git = "https://gitlab.com/tezos/tezos" }
tezos_smart_rollup_mock = { git = "https://gitlab.com/tezos/tezos" }
