[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos-smart-rollup = "0.1.0"
tezos-smart-rollup-host="0.1.0"
tezos-smart-rollup-core="0.1.0"
tezos-smart-rollup-entrypoint="0.1.0"
tezos-smart-rollup-storage="0.1.0"
tezos-smart-rollup-encoding="0.1.0"
serde = {version = "1.0.163", features = ["derive"]}
bincode = "1.3.1"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
